2015. 4.28. Added zCopy. [cure_misc]
2015. 4.11. Added zListToHead and zListToTail. [cure_list]
2015. 4.11. Modified zOptionRead so as to store unrecognized command line arguments into a list of strings. [cure_option]
2015. 4.11. Added zStrList class. [cure_strlist]
2015. 3.26. Added zTagFRead and zFieldFRead. [cure_string]
2015. 3.25. Added zListMove (thanks to Ken'ya Tanaka) [cure_list]
2015. 2.16. Redefined byte, ubyte, word and uword. [cure_defs]
2015. 2.16. Defined uint8_t, uint16_t, uint32_t, uint64_t, int8_t, int16_t
  int32_t and int64_t. [cure_defs]
2015. 2.14. Added zReplaceSuffix. [cure_string]
2015. 2.14. Added zStrCat and zStrCopyNC. [cure_string]
2015. 2.14. Modified zGetBasename. [cure_string]
2015. 2.14. Modified zStrCopy to specify the buffer size. [cure_string]
2015. 2. 9. Added cure-config-gen. [app]
2015. 1. 7. Added cure-config. [app]
2014. 1.10. Reimplemented zRRTabClass and defined zRRBool. [cure_rrtab]
2013.12.11. Modified zOptionRead to return a boolean. [cure_option]
2012. 4.12. Added zStrInsChar, zStrOvrChar, zStrDelChar and zStrBSChar. [cure_string]
2012. 4.12. Modified zStrAddChar to require the size of a buffer. [cure_string]
2010.12. 9. Added zNullStr. [cure_string]
2010.12. 7. Added zFSkipIncludedChar and zSSkipIncludedChar. [cure_string]
2010.12. 6. Added zStrCopy to allow to copy a string to an overlapped area. [cure_string]
2010.12. 5. Debuged _zFFractToken and _zSFractToken. [cure_string]
2010. 9.12. Added zArrayInsert and zArrayDelete. [cure_array]
2010. 9. 2. Added zListSwap and modified zListItem. [cure_list]
2010. 7.22. Added zBound. [cure_misc]
2010. 3.16. Renamed zIndexDestroy to zIndexFree. [cure_index]
2010. 3.16. Renamed zArrayCreate and zArrayDestroy to zArrayAlloc and zArrayFree, respectively. [cure_array]
2010. 1.13. Modified zArrayClass for C++ implementation. [cure_array]
2009.12. 4. Added cure_compat. [cure_defs, cure_compat, cure_misc]
2009.11.12. Treated zNameFind and zFSkipComment. [cure_name, cure_string]