@@ -1,3 +1,6 @@
+2015. 5. 3. Debugged _zOptionFindKey and _zOptionFindLongKey. [cure_option]
+2015. 5. 3. Modified zOptionRead. [cure_option]
+2015. 5. 3. Modified zStrListInsert to choose if it clones the given string. [cure_strlist]
 2015. 4.28. Added zCopy. [cure_misc]
 2015. 4.11. Added zListToHead and zListToTail. [cure_list]
 2015. 4.11. Modified zOptionRead so as to store unrecognized command line arguments into a list of strings. [cure_option]
